fix adding address

--- a/src/app/shared/ubs-add-address-pop-up/ubs-add-address-pop-up.component.html
+++ b/src/app/shared/ubs-add-address-pop-up/ubs-add-address-pop-up.component.html
@@ -17,7 +17,7 @@
   <button class="ubs-secondary-global-button m-btn" (click)="onNoClick()">
     {{ 'personal-info.pop-up-cancel' | translate }}
   </button>
-  <button class="ubs-primary-global-button m-btn" (click)="addAdress()" [disabled]="addAddressForm.invalid">
+  <button class="ubs-primary-global-button m-btn" (click)="addAddress()" [disabled]="addAddressForm.invalid">
     {{ (data.edit ? 'personal-info.pop-up-save-changes' : 'personal-info.pop-up-add-address') | translate }}
   </button>
 </div>
