--- a/src/app/shared/address-input/address-input.component.html
+++ b/src/app/shared/address-input/address-input.component.html
@@ -55,7 +55,7 @@
         type="text"
         class="shadow-none form-control"
         placeholder="{{ 'personal-info.pop-up-house' | translate }}"
-        (change)="onHouseNumberChange()"
+        (input)="onHouseNumberChange()"
       />
       <div class="validation" *ngIf="houseNumber.invalid && houseNumber.touched">
         <app-ubs-input-error [formElement]="houseNumber" [inputName]="'requiredHouseNumber'"></app-ubs-input-error>
@@ -69,7 +69,7 @@
         type="text"
         class="shadow-none form-control"
         placeholder="{{ 'personal-info.pop-up-corps' | translate }}"
-        (change)="onHouseCorpusChange()"
+        (input)="onHouseCorpusChange()"
       />
       <div class="validation" *ngIf="houseCorpus.invalid && houseCorpus.touched">
         <app-ubs-input-error [formElement]="houseCorpus"></app-ubs-input-error>
@@ -83,7 +83,7 @@
         type="text"
         class="shadow-none form-control"
         placeholder="{{ 'personal-info.pop-up-entrance' | translate }}"
-        (change)="onEntranceNumberChange()"
+        (input)="onEntranceNumberChange()"
       />
       <div class="validation" *ngIf="entranceNumber.invalid && entranceNumber.touched">
         <app-ubs-input-error [formElement]="entranceNumber"></app-ubs-input-error>
