--- a/src/app/shared/address-input/address-input.component.scss
+++ b/src/app/shared/address-input/address-input.component.scss
@@ -105,6 +105,10 @@ select {
   text-align: end;
 }
 
+.check-box {
+  padding-left: 6px;
+}
+
 @media (max-width: 767px) {
   .secondary-global-button,
   .primary-global-button,
