--- a/src/app/shared/address-input/address-input.component.html
+++ b/src/app/shared/address-input/address-input.component.html
@@ -93,16 +93,28 @@
 
   <div class="col-md-6 col-sm-6 form-group">
     <label for="district">{{ 'personal-info.pop-up-district' | translate }}</label>
-    <input id="entranceNumber" formControlName="district" type="text" class="shadow-none form-control" />
+
+    <input *ngIf="!isKyiv" id="district" formControlName="district" type="text" class="shadow-none form-control" />
+
+    <mat-select
+      *ngIf="isKyiv"
+      formControlName="district"
+      class="shadow-none form-control"
+      (selectionChange)="onDistrictChange($event.value.nameUa, $event.value.nameEn)"
+      [placeholder]="
+        addressForm.get('district').value
+          ? addressForm.get('district').value + ', ' + ('personal-info.info-district-placeholder' | translate)
+          : ''
+      "
+    >
+      <mat-option *ngFor="let district of districtsForKyiv" [value]="district">
+        {{ currentLanguage === 'en' ? district.nameEn : district.nameUa }}
+      </mat-option>
+    </mat-select>
+
     <div class="validation" *ngIf="district.invalid && district.touched">
       <app-ubs-input-error [formElement]="district"></app-ubs-input-error>
     </div>
-  </div>
-
-  <div class="col-md-6 col-sm-6 form-group d-flex align-items-end check-box" *ngIf="addressForm.get('district').value">
-    <mat-checkbox [checked]="isDistrictEditable" (change)="toggleDistrictInput()">
-      {{ 'Was the district set incorrectly?' | translate }}
-    </mat-checkbox>
   </div>
 
   <div *ngIf="isShowCommentInput" class="form-group comment-section">
