--- a/src/app/ubs/ubs-user/ubs-user-profile-page/ubs-user-profile-page.component.scss
+++ b/src/app/ubs/ubs-user/ubs-user-profile-page/ubs-user-profile-page.component.scss
@@ -150,7 +150,7 @@ $inputwidth: 260px;
 
     .recipientEmail {
       width: $inputwidth + 65px;
-      background-color: var(--ubs-ligth-grey);
+      background-color: var(--ubs-light-grey);
     }
 
     .recipientPhone {
