--- a/src/app/main/component/user/components/profile/profile-dashboard/profile-dashboard.component.html
+++ b/src/app/main/component/user/components/profile/profile-dashboard/profile-dashboard.component.html
@@ -99,32 +99,34 @@
       <mat-tab label="{{ 'homepage.events.my-space.tag-title' | translate }}">
         <hr />
         <div *ngIf="!loading; else spinner">
-          <div class="in-progress header" id="my-events" *ngIf="!isFavoriteBtnClicked">
-            <div class="buttons-wrapper">
-              <a [routerLink]="['/events/create-event']">
-                <div id="create-button-event" class="secondary-global-button s-btn">
-                  <span>{{ 'profile.dashboard.add-event' | translate }}</span>
+          <div class="in-progress">
+            <div class="in-progress header" id="my-events" *ngIf="!isFavoriteBtnClicked">
+              <div class="buttons-wrapper">
+                <a [routerLink]="['/events/create-event']">
+                  <div id="create-button-event" class="secondary-global-button s-btn">
+                    <span>{{ 'profile.dashboard.add-event' | translate }}</span>
+                  </div>
+                </a>
+                <div class="favourites" (click)="goToFavorites()">
+                  <span class="flag-active"></span>
                 </div>
-              </a>
-              <div class="favourites" (click)="goToFavorites()">
-                <span class="flag-active"></span>
+              </div>
+            </div>
+            <div *ngIf="isFavoriteBtnClicked" class="in-progress header">
+              <div class="button-arrow" (click)="escapeFromFavorites()">
+                <img [src]="images.arrowLeft" aria-hidden="true" alt="arrow" class="button-arrow-img" />
+                <div class="edit-events">{{ 'create-event.back' | translate }}</div>
               </div>
             </div>
             <div class="events-filter">
               <div class="events-types">
-                <mat-checkbox [(ngModel)]="isOnlineChecked" (ngModelChange)="onCheckboxChange('ONLINE')" color="primary" class="checkbox">
+                <mat-checkbox [(ngModel)]="isOnlineChecked" (ngModelChange)="onCheckboxChange()" color="primary" class="checkbox">
                   {{ 'homepage.events.my-space.event-type-online' | translate }}
                 </mat-checkbox>
-                <mat-checkbox [(ngModel)]="isOfflineChecked" (ngModelChange)="onCheckboxChange('OFFLINE')" color="primary" class="checkbox"
+                <mat-checkbox [(ngModel)]="isOfflineChecked" (ngModelChange)="onCheckboxChange()" color="primary" class="checkbox"
                   >{{ 'homepage.events.my-space.event-type-offline' | translate }}
                 </mat-checkbox>
               </div>
-            </div>
-          </div>
-          <div *ngIf="isFavoriteBtnClicked" class="in-progress header">
-            <div class="button-arrow" (click)="escapeFromFavorites()">
-              <img [src]="images.arrowLeft" aria-hidden="true" alt="arrow" class="button-arrow-img" />
-              <div class="edit-events">{{ 'create-event.back' | translate }}</div>
             </div>
           </div>
           <div
@@ -140,6 +142,9 @@
                 <app-events-list-item [event]="eventItem" [userId]="userId" [isUserAssignList]="true"></app-events-list-item>
               </li>
             </ul>
+            <p class="end-page-txt" *ngIf="!eventsList.length && !this.isFavoriteBtnClicked && !this.loadingEvents">
+              {{ 'homepage.events.no-matching-left' | translate }}
+            </p>
           </div>
           <div
             *ngIf="isFavoriteBtnClicked"
@@ -160,6 +165,9 @@
                 ></app-events-list-item>
               </li>
             </ul>
+            <p class="end-page-txt" *ngIf="!favouriteEvents.length && this.isFavoriteBtnClicked && !this.loadingEvents">
+              {{ 'homepage.events.no-matching-left' | translate }}
+            </p>
           </div>
 
           <div class="no-data" *ngIf="!this.totalEvents">
