--- a/src/app/ubs/ubs/components/ubs-confirm-page/ubs-confirm-page.component.scss
+++ b/src/app/ubs/ubs/components/ubs-confirm-page/ubs-confirm-page.component.scss
@@ -26,10 +26,10 @@
       padding: 8px 14px;
       margin-top: 22px;
       margin-left: 40px;
-      height: 2.75rem;
       width: 254px;
       border-radius: 4px;
       font-size: 18px;
+      font-family: var(--ubs-quaternary-font);
       color: var(--ubs-quaternary-dark-grey);
       border-color: var(--ubs-button-light-green);
       background: var(--ubs-button-light-green);
