--- a/src/app/main/component/user/components/profile/profile-widget/profile-progress/profile-progress.component.scss
+++ b/src/app/main/component/user/components/profile/profile-widget/profile-progress/profile-progress.component.scss
@@ -6,10 +6,9 @@ p {
 
 .stat {
   display: grid;
-  grid-template-rows: 58px;
   grid-template-columns: repeat(4, auto);
   column-gap: 16px;
-  padding: 0 16px;
+  padding: 0 0 24px;
 
   .chain {
     font-family: var(--tertiary-font);
@@ -98,7 +97,7 @@ p {
 @include responsivePCFirst(sm) {
   .stat {
     .chain {
-      padding: 0 16px;
+      padding: 0 16px 16px;
 
       p:first-child {
         font-size: 24px;
