--- a/src/app/main/component/user/components/profile/profile.component.scss
+++ b/src/app/main/component/user/components/profile/profile.component.scss
@@ -155,7 +155,7 @@
   .profile-wrapper {
     .right-column {
       app-shopping-list {
-        margin: 0px;
+        margin: 0;
         display: none;
       }
     }
