--- a/src/app/main/component/user/components/profile/users-achievements/users-achievements.component.scss
+++ b/src/app/main/component/user/components/profile/users-achievements/users-achievements.component.scss
@@ -181,7 +181,7 @@ p {
       width: 100%;
       margin: 0;
       padding: 0 16px;
-      border-top: 0px;
+      border-top: 0;
     }
   }
 }
@@ -192,7 +192,7 @@ p {
       width: 100%;
       margin: 0;
       padding: 0 16px;
-      border-top: 0px;
+      border-top: 0;
     }
   }
 }
