--- a/src/app/main/component/user/components/profile/users-friends/users-friends.component.scss
+++ b/src/app/main/component/user/components/profile/users-friends/users-friends.component.scss
@@ -234,7 +234,7 @@ p {
       width: 100%;
       margin: 0;
       padding: 0 16px;
-      border-top: 0px;
+      border-top: 0;
     }
   }
 }
@@ -245,7 +245,7 @@ p {
       width: 100%;
       margin: 0;
       padding: 0 16px;
-      border-top: 0px;
+      border-top: 0;
     }
   }
 }
