--- a/src/app/main/component/user/components/habit/add-new-habit/add-new-habit.component.scss
+++ b/src/app/main/component/user/components/habit/add-new-habit/add-new-habit.component.scss
@@ -196,14 +196,14 @@
           }
         }
 
-        .duration-shoping {
+        .duration-to-do {
           display: flex;
           width: 100%;
           justify-content: space-between;
           gap: 32px;
 
           .duration,
-          .shopping {
+          .to-do {
             width: calc(50% - 16px);
             background: var(--secondary-light-grey);
             border-radius: 8px;
@@ -402,13 +402,13 @@
         padding: 0;
         gap: 24px;
 
-        .duration-shoping {
+        .duration-to-do {
           flex-direction: column;
           height: auto;
           gap: 24px;
 
           .duration,
-          .shopping {
+          .to-do {
             width: 100%;
           }
         }
