--- a/src/app/main/component/user/components/profile/edit-profile/edit-profile.component.html
+++ b/src/app/main/component/user/components/profile/edit-profile/edit-profile.component.html
@@ -67,9 +67,9 @@
             </li>
             <li>
               <label class="label-wrapper">
-                <input type="checkbox" formControlName="showShoppingList" />
+                <input type="checkbox" formControlName="showToDoList" />
                 <span class="checkmark"></span>
-                {{ 'user.edit-profile.shopping-list' | translate }}
+                {{ 'user.edit-profile.to-do-list' | translate }}
               </label>
             </li>
           </ul>
