--- a/src/app/main/component/user/components/profile/users-friends/friend-dashboard/friend-profile-page/friend-profile-page.component.scss
+++ b/src/app/main/component/user/components/profile/users-friends/friend-dashboard/friend-profile-page/friend-profile-page.component.scss
@@ -76,7 +76,7 @@
 @include responsiveMobileFirst(xl) {
   .profile-wrapper {
     .left-column {
-      .app-shopping-list {
+      .app-to-do-list {
         display: none;
       }
     }
