--- a/src/app/main/component/user/components/profile/profile.component.scss
+++ b/src/app/main/component/user/components/profile/profile.component.scss
@@ -153,7 +153,7 @@
 
   .profile-wrapper {
     .right-column {
-      app-shopping-list {
+      app-to-do-list {
         display: none;
       }
     }
@@ -174,13 +174,13 @@
         display: flex;
       }
 
-      .app-shopping-list {
+      .app-to-do-list {
         display: none;
       }
     }
 
     .right-column {
-      app-shopping-list {
+      app-to-do-list {
         margin-top: 50px;
         margin-bottom: 24px;
       }
@@ -191,13 +191,13 @@
 @include responsiveRange(md, xl) {
   .profile-wrapper {
     .left-column {
-      .app-shopping-list {
+      .app-to-do-list {
         display: block;
       }
     }
 
     .right-column {
-      .app-shopping-list {
+      .app-to-do-list {
         display: none;
       }
     }
@@ -207,13 +207,13 @@
 @include responsiveMobileFirst(xl) {
   .profile-wrapper {
     .left-column {
-      .app-shopping-list {
+      .app-to-do-list {
         display: none;
       }
     }
 
     .right-column {
-      .app-shopping-list {
+      .app-to-do-list {
         display: block;
         margin-top: 16px;
       }
