--- a/src/app/ubs/ubs-admin/components/ubs-admin-table/table-cell-select/table-cell-select.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-table/table-cell-select/table-cell-select.component.html
@@ -7,7 +7,7 @@
 
   <mat-select
     #select
-    (change)="chosenOption($event)"
+    (selectionChange)="chosenOption($event)"
     [placeholder]="currentValue | serverTranslate: lang"
     (click)="onSelectClick()"
     (closed)="onSelectClosed()"
