--- a/src/app/main/component/eco-news/components/news-list/news-list.component.scss
+++ b/src/app/main/component/eco-news/components/news-list/news-list.component.scss
@@ -145,7 +145,7 @@ div hr {
 .news-flags {
   width: 40px;
   height: 40px;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255 255 255/ 80%);
   position: absolute;
   top: 8px;
   right: 8px;
