--- a/src/app/main/component/eco-news/components/news-list/news-list.component.html
+++ b/src/app/main/component/eco-news/components/news-list/news-list.component.html
@@ -10,15 +10,14 @@
               src="assets/img/smallCross.svg"
               class="cross-position"
               (click)="cancelSearch()"
-              tabindex="0"
               (keydown.enter)="cancelSearch()"
               alt="cancel search"
             />
           </div>
-          <div class="container-img" (click)="search()" tabindex="0" (keydown.enter)="search()" *ngIf="!searchToggle">
+          <div class="container-img" (click)="search()" (keydown.enter)="search()" *ngIf="!searchToggle">
             <span class="search-img" [ngClass]="{ 'search-img-active': searchToggle }"></span>
           </div>
-          <div class="container-img" (click)="showSelectedNews()" tabindex="0" (keydown.enter)="showSelectedNews()">
+          <div class="container-img" (click)="showSelectedNews()" (keydown.enter)="showSelectedNews()">
             <span class="bookmark-img" [ngClass]="{ 'bookmark-img-active': bookmarkSelected }"></span>
           </div>
           <div class="container-img">
@@ -63,7 +62,6 @@
             <div
               class="news-flags favourite-button"
               (click)="changeFavoriteStatus($event, data)"
-              tabindex="0"
               (keydown.enter)="changeFavoriteStatus($event, data)"
             >
               <span [ngClass]="data.favorite ? 'flag-active' : 'flag'"></span>
