--- a/src/app/main/component/user/components/profile/users-friends/friend-dashboard/friend-profile-page/friend-profile-dashboard/friend-profile-dashboard.component.scss
+++ b/src/app/main/component/user/components/profile/users-friends/friend-dashboard/friend-profile-page/friend-profile-dashboard/friend-profile-dashboard.component.scss
@@ -87,27 +87,49 @@
 }
 
 @media (min-width: 1200px) {
+  .dashboard-container {
+    max-width: 900px;
+    overflow-x: auto;
+  }
+
   .friends-list {
     display: grid;
     grid-template-columns: 417px 417px;
   }
 }
 
+@media (min-width: 1440px) {
+  .dashboard-container {
+    max-width: 1220px;
+    overflow-x: auto;
+  }
+}
+
+@media (max-width: 576px) {
+  .dashboard-container {
+    padding: 0;
+  }
+}
+
 .gallery {
   display: grid;
-  grid-template-columns: 250px;
+  grid-template-columns: minmax(280px, 350px);
   grid-gap: 30px;
   justify-content: center;
 
   @media (min-width: 576px) {
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(1, minmax(200px, 380px));
   }
 
   @media (min-width: 992px) {
-    grid-template-columns: repeat(3, 199px);
+    grid-template-columns: repeat(2, minmax(250px, 350px));
   }
 
   @media (min-width: 1200px) {
+    grid-template-columns: repeat(2, 350px);
+  }
+
+  @media (min-width: 1440px) {
     grid-template-columns: repeat(3, 350px);
   }
 }
