--- a/src/app/main/component/user/components/profile/to-do-list/to-do-list.component.html
+++ b/src/app/main/component/user/components/profile/to-do-list/to-do-list.component.html
@@ -24,6 +24,7 @@
             </span>
             <mat-checkbox
               #checkbox
+              (keydown.enter)="toggleDone(toDoItem)"
               [(ngModel)]="toDoItem.selected"
               class="checkbox"
               color="primary"
