feat: Show total in front of each section header in search results
When using search, show not only a total number of results, but also total number for each section separately.

Resolves: #7745

--- a/src/app/shared/search-popup/search-popup.component.scss
+++ b/src/app/shared/search-popup/search-popup.component.scss
@@ -136,6 +136,10 @@ div.search-content-wrapper {
   display: block;
 }
 
+span.counter {
+  opacity: 0.5;
+}
+
 @media (min-width: 576px) {
   .list-search-items {
     grid-template-columns: repeat(2, 254px);
