fix order history message

--- a/src/app/ubs/ubs-admin/components/ubs-admin-order-history/ubs-admin-order-history.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-order-history/ubs-admin-order-history.component.html
@@ -32,6 +32,7 @@
           (mouseenter)="$event.stopImmediatePropagation()"
           (mouseleave)="$event.stopImmediatePropagation()"
           (click)="showPopup(historyAction.id)"
+          (keydown)="showPopup(historyAction.id, $event)"
         >
           <span>{{ historyAction.status }} </span>
           <span *ngIf="historyAction.result"> -</span>
