--- a/src/app/ubs/ubs-admin/components/ubs-admin-order-history/ubs-admin-order-history.component.scss
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-order-history/ubs-admin-order-history.component.scss
@@ -58,9 +58,10 @@
 }
 
 .hiddenText {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  white-space: normal;
+  overflow: visible;
+  text-overflow: unset;
+  word-wrap: break-word;
 }
 
 .popup {
