--- a/src/app/main/component/shared/components/tag-filter/tag-filter.component.scss
+++ b/src/app/main/component/shared/components/tag-filter/tag-filter.component.scss
@@ -29,7 +29,8 @@
   display: flex;
   padding: 0;
   margin: 0;
-  overflow: auto;
+  flex-wrap: wrap;
+  row-gap: 8px;
   white-space: nowrap;
   min-height: 42px;
 
