--- a/src/app/main/component/user/components/profile/profile-dashboard/profile-dashboard.component.scss
+++ b/src/app/main/component/user/components/profile/profile-dashboard/profile-dashboard.component.scss
@@ -71,6 +71,10 @@ a {
     margin-bottom: 24px;
   }
 
+  .filters {
+    margin-top: 12px;
+  }
+
   .justify-end {
     justify-content: end;
   }
