disable fields if status is Done or Canceled

--- a/src/app/ubs/ubs-admin/components/ubs-admin-table/ubs-admin-table.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-table/ubs-admin-table.component.html
@@ -337,6 +337,7 @@
           [id]="row.id"
           [ordersToChange]="idsToChange"
           [isAllChecked]="allChecked"
+          [doneOrCanceled]="checkStatusOfOrders(row.id)"
           (editDateCell)="editCell($event)"
           (showBlockedInfo)="showBlockedMessage($event)"
         >
@@ -349,6 +350,7 @@
           [id]="row.id"
           [ordersToChange]="idsToChange"
           [isAllChecked]="allChecked"
+          [doneOrCanceled]="checkStatusOfOrders(row.id)"
           (cancelEdit)="cancelEditCell($event)"
           (editTimeCell)="editCell($event)"
           (showBlockedInfo)="showBlockedMessage($event)"
